Source/WebKit/blackberry/Api/WebPage_p.h
@@ -498,7 +498,10 @@ public:
 #if ENABLE(EVENT_MODE_METATAGS)
     WebCore::TouchEventMode m_touchEventModePriorGoingFullScreen;
 #endif
-    int m_xScrollOffsetPriorGoingFullScreen;
+#if ENABLE(VIDEO)
+    double m_scaleBeforeFullScreen;
+    int m_xScrollOffsetBeforeFullScreen;
+#endif
 #endif
 
     Platform::BlackBerryCursor m_currentCursor;
